# generic-crud

./: LICENSE  servant-playground.cabal  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/cabal-helper/: Main.hi
.stack-work/cabal-helper/CabalHelper/Runtime/: Compat.hi  HelperMain.hi
.stack-work/cabal-helper/CabalHelper/Shared/: Common.hi  InterfaceTypes.hi
.stack-work/ghci/0a49bde7/: cabal_macros.h
.stack-work/ghci/1d27d4f1/: cabal_macros.h
.stack-work/ghci/604dce4b/: cabal_macros.h
.stack-work/ghci/60db3dcb/: cabal_macros.h
.stack-work/ghci/e66a9534/: cabal_macros.h
.stack-work/ghci/ea33dce6/: cabal_macros.h
.stack-work/install/x86_64-linux-tinfo6/0eb59de4cc10be2e8183ff731b00cfa74b73cad0e891f1132d327a43f7943869/8.6.5/lib/x86_64-linux-ghc-8.6.5/servant-playground-0.1.0.0-2WQ6KC74TDA1EgN9q135tI/: Lib.dyn_hi  Lib.hi  Server.hi  Types.dyn_hi  Types.hi
.stack-work/install/x86_64-linux-tinfo6/0eb59de4cc10be2e8183ff731b00cfa74b73cad0e891f1132d327a43f7943869/8.6.5/lib/x86_64-linux-ghc-8.6.5/servant-playground-0.1.0.0-Ctme6gdsJSR8GLVbBl3enx/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux-tinfo6/0eb59de4cc10be2e8183ff731b00cfa74b73cad0e891f1132d327a43f7943869/8.6.5/pkgdb/: package.cache  servant-playground-0.1.0.0-2WQ6KC74TDA1EgN9q135tI.conf
.stack-work/install/x86_64-linux-tinfo6/184fed9167b6a0510b70a5ee0eef65a1d275dc3454f9d41772ab4add3f911a04/8.6.5/lib/x86_64-linux-ghc-8.6.5/servant-playground-0.1.0.0-2v2dEpAXo1hCeRpOXZlNH4/: Database.hi  Types.dyn_hi  Types.hi
.stack-work/install/x86_64-linux-tinfo6/184fed9167b6a0510b70a5ee0eef65a1d275dc3454f9d41772ab4add3f911a04/8.6.5/lib/x86_64-linux-ghc-8.6.5/servant-playground-0.1.0.0-CYyEYnuBEgNKUe1AA7uNQU/: Database.hi  Server.hi  Types.dyn_hi  Types.hi
.stack-work/install/x86_64-linux-tinfo6/184fed9167b6a0510b70a5ee0eef65a1d275dc3454f9d41772ab4add3f911a04/8.6.5/lib/x86_64-linux-ghc-8.6.5/servant-playground-0.1.0.0-oPNdWw9WGM11ypoumEEdy/: Database.hi  Server.dyn_hi  Server.hi  Types.dyn_hi  Types.hi
.stack-work/install/x86_64-linux-tinfo6/184fed9167b6a0510b70a5ee0eef65a1d275dc3454f9d41772ab4add3f911a04/8.6.5/pkgdb/: package.cache  servant-playground-0.1.0.0-2v2dEpAXo1hCeRpOXZlNH4.conf  servant-playground-0.1.0.0-CYyEYnuBEgNKUe1AA7uNQU.conf
.stack-work/install/x86_64-linux-tinfo6/a959b21616bcae181421d90737df295ace33e78aa0b0896fcaa1b719e866732c/8.6.5/lib/x86_64-linux-ghc-8.6.5/servant-playground-0.1.0.0-43EzyIZ3hsW9bsVY0afWjq/: Database.hi  Server.hi  Types.dyn_hi  Types.hi
.stack-work/install/x86_64-linux-tinfo6/a959b21616bcae181421d90737df295ace33e78aa0b0896fcaa1b719e866732c/8.6.5/lib/x86_64-linux-ghc-8.6.5/servant-playground-0.1.0.0-BcN1dq5ACO67n4t3yu5qyA/: Database.hi  Types.dyn_hi
.stack-work/install/x86_64-linux-tinfo6/a959b21616bcae181421d90737df295ace33e78aa0b0896fcaa1b719e866732c/8.6.5/lib/x86_64-linux-ghc-8.6.5/servant-playground-0.1.0.0-DzKFuQ62xj5G9scX18iaHD/: Server.hi  Types.dyn_hi
.stack-work/install/x86_64-linux-tinfo6/a959b21616bcae181421d90737df295ace33e78aa0b0896fcaa1b719e866732c/8.6.5/lib/x86_64-linux-ghc-8.6.5/servant-playground-0.1.0.0-I1KWJL4gTGSAHg6r2Jlb6A/: Server.hi  Types.dyn_hi  Types.hi
.stack-work/install/x86_64-linux-tinfo6/a959b21616bcae181421d90737df295ace33e78aa0b0896fcaa1b719e866732c/8.6.5/pkgdb/: package.cache  servant-playground-0.1.0.0-DzKFuQ62xj5G9scX18iaHD.conf
docs/: docs.md
src/: Database.hs  DatabaseEff.hs  Docs.hs  Server.hs  Types.hs
