name:                servant-playground
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bolt12/servant-playground#readme
license:             BSD3
license-file:        LICENSE
author:              Armando Santos
maintainer:          armandoifsantos@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Server,
                       Types,
                       DatabaseEff
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant
                     , servant-server
                     , wai
                     , warp
                     , polysemy <= 1.3.0.0
                     , transformers
  default-language:    Haskell2010

executable servant-playground-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-playground
  default-language:    Haskell2010

test-suite servant-playground-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-playground
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bolt12/servant-playground
